<resources>
    <string name="app_name">Just Rates</string>
    <string name="logo">Just Rates</string>
    <string name="hint_source_field">Source currency code</string>
    <string name="hint_target_field">Target currency code</string>
    <string name="hint_amount_field">Source currency amount</string>
    <string name="main_btn">Convert</string>
    <string name="empty_field_error">Fill all the fields</string>
    <string name="fetch_error">Unable to fetch the rate</string>
    <string name="favourites_link"><u>favorite rates ></u></string>

    <string name="fav_logo">Favourite rates</string>
    <string name="fav_add_btn">Add</string>
    <string name="fav_delete_btn_description">Delete</string>
    <string name="fav_rate_already_exists">Rate already in favourites</string>
</resources>