<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/source_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorFieldBackground"
        android:hint="@string/hint_source_field"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextAlt" />

    <EditText
        android:id="@+id/target_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source_field"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorFieldBackground"
        android:hint="@string/hint_target_field"
        android:minHeight="48dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextAlt"
        android:inputType="text" />

    <EditText
        android:id="@+id/amount_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/target_field"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorFieldBackground"
        android:hint="@string/hint_amount_field"
        android:minHeight="48dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextAlt"
        android:inputType="number" />

    <Button
        android:id="@+id/main_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_field"
        android:layout_marginHorizontal="110dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/main_btn" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_btn"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/favourites_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/favourites_link"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextAlt"
        android:textSize="16sp" />

</RelativeLayout>